--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,12 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   </head>
 
   <body>
-    <% if flash %>
-      
-    <% end %>
+    <%= render 'layouts/flash' %>
+     <h2><%= link_to 'Home',root_path %></h2>
     <%= yield %>
   </body>
 </html>
