--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
 <h1> This is homepage</h1>
 
-<%= link_to 'Signup',new_user_path %>
+<%= link_to 'Signup',signup_path %>
+<%= link_to 'Signin',signin_path %>
+<% if logged_in? %>
+<%= link_to 'Signout',signout_path,method: :delete,data:{confirm:'are you sure?'} %>
+	
+<% end %>
