--- a/app/views/users/_error.html.erb
+++ b/app/views/users/_error.html.erb
@@ -1,5 +1,5 @@
-<% if @user.errors.any?%>
-  <% @user.errors.full_messages.each do |msg| %>
+<% if model_name.errors.any?%>
+  <% model_name.errors.full_messages.each do |msg| %>
     <li><%= msg %></li>
   <% end %>
 <% end %>
