--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for @user do |f| %>
+<% if owner %>
+  
+<%= form_for model_name,url:signup_owner_path do |f| %>
   <%= f.label :name %> <br><br>
   <%= f.text_field :name,placeholder:'Your name' %> <br><br>
 
@@ -33,6 +35,54 @@
   <%= f.label :pincode %> <br><br>
   <%= f.number_field :pincode,placeholder:"Your pincode",required: true %> <br><br>
 
+    <%= f.label :adh ,"Aadhaar No"%> <br><br>
+    <%= f.number_field :adh,placeholder:"Your aadhaar",required: true %> <br><br>
+
   <%= f.submit para %>
+
+<% end %>
+
+<% else %>
+
+<%= form_for model_name do |f| %>
+  <%= f.label :name %> <br><br>
+  <%= f.text_field :name,placeholder:'Your name' %> <br><br>
+
+  <%= f.label :username %> (<em>minimum is 6 charectors</em>)<br><br>
+  <%= f.text_field :username,placeholder:"Your username" ,required: true%> <br><br>
+
+  <%= f.label :password %> <br>
+  <%= f.password_field :password,required: true %> <br>
+
+  <%= f.label :password_confirmation %> <br>
+  <%= f.password_field :password_confirmation,required: true %> <br>
+
+  <%= f.label :gender %> <br>
+  <%= f.radio_button :gender,'male',value:'MALE',required: true %> Male
+  <%= f.radio_button :gender,'female',value:'FEMALE',required: true %> Female <br>
+
+   <%= f.label :email %> <br><br>
+  <%= f.text_field :email,placeholder:"Your email" ,required: true%> <br><br>
+
+  <%= f.label :city %> <br><br>
+  <%= f.text_field :city,placeholder:"Your city" ,required: true%> <br><br>
+
+  <%= f.label :state %> <br><br>
+  <%= f.text_field :state,placeholder:"Your state" ,required: true%> <br><br>
+
+  <%= f.label :address %> <br><br>
+  <%= f.text_field :address,placeholder:"Your address",required: true %> <br><br>
+
+  <%= f.label :phone %> <br><br>
+  <%= f.number_field :phone,placeholder:"Your phone",required: true %> <br><br>
+
+  <%= f.label :pincode %> <br><br>
+  <%= f.number_field :pincode,placeholder:"Your pincode",required: true %> <br><br>
+
+ 
+
+  <%= f.submit para %>
+
+<% end %>
 
 <% end %>
