--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Sign up</h1>
 
-<%= render 'users/error'  %>
+<%= render 'users/error',model_name:@user  %>
 
-<%= render 'users/form',para:'Signup' %>
+<%= render 'users/form',para:'Signup',model_name: @user,owner:false%>
