--- a/app/views/messes/new.html.erb
+++ b/app/views/messes/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Upload mess info</h1>
+<%= render 'users/error',model_name:@mess %>
+
 <%= form_for @mess,url:upload_path do |f|  %>
 	<%= f.label :title %> <br>
 	<%= f.text_field :title,placeholder:'Write the title',required:true %> <br> <br>
@@ -26,8 +28,8 @@
 
 
 	<%= f.label :service_boys_only,"Only for service boys" %>  <br>
-	<%= f.radio_button :service_boys_only,true,value:true,required:true %>Yes
-	<%= f.radio_button :service_boys_only,false,value:false,required:true %>No <br><br>
+	<%= f.radio_button :service_boys_only,true,value:true,required:true,checked:true%>Yes
+	<%= f.radio_button :service_boys_only,false,value:false,required:true%>No <br><br>
 
 	<%= f.label :service_girls_only,"Only for service girls" %>  <br>
 	<%= f.radio_button :service_girls_only,true,value:true,required:true %>Yes
@@ -49,7 +51,7 @@
 	<%= f.radio_button :room_available,true,value:true,required:true %>Yes
 	<%= f.radio_button :room_available,false,value:false,required:true %>No <br><br>
 
-	<%= f.label :images %>
+	<%= f.label :images ,'Upload 5 images'%>
     <%= f.file_field :images,multiple:true %>
 
 	<%= f.submit 'Upload' %>
