--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if @user.is_owner %>
-	<h2>YOU ARE OWNER</h2>
+	<h2 class="badge">YOU ARE OWNER</h2>
 <% end %>
 <h1><%= @user.name %></h1>
 <p>Userrname: @<%= @user.username %></p>
