--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+/*
 .images
 {
     display: flex;
@@ -23,7 +24,6 @@
 {
     width: 100%;
     margin-right: 10px;
-    /*border: 2px solid;*/
     box-shadow: 1px 1px 8px #bbb;
     border-radius: 15px;
 }
@@ -34,4 +34,4 @@
     text-align: center;
     border-radius: 10px;
     color: white;
-}
+}*/
