--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -1,1 +1,154 @@
 /*desktop css goes here*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif;
+}
+
+:root
+{
+	--color-black: #121212;
+	/*--blue-light: #26D0CE;*/
+	--blue-light: #f85032;
+	/*--blue-dark:#1A2980 ;*/
+	--blue-dark:#e73827 ;
+
+}
+a{
+	text-decoration: none;
+	/*color: #fff;*/
+}
+.nav_bar_container
+{
+	width: 100%;
+	background-color:var(--color-black) ;
+	padding: 3px 20px;
+	height: 70px;
+	color: #fff;
+}
+.nav_bar
+{
+	display: flex;
+	/*background-color: pink;*/
+	padding: 20px 10px;
+	justify-content: space-between;
+    align-items: flex-start;
+}
+.nav_bar .nav_bar_logo
+{
+	min-width: 40%;
+	justify-content: center;
+	padding-left: 30px;
+}
+.the_heading2
+{
+	font-size:30px;
+	margin-top: -4px;
+	color: #fff;
+
+}
+.logo_color
+{
+	font-weight: 900;
+  background: -webkit-linear-gradient(var(--blue-dark),var(--blue-light));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+.nav_bar .nav_bar_elements
+{
+	width: 60%;
+	display: flex;
+	justify-content: space-evenly;
+	font-size: 17px;
+
+}
+ .nav_bar_elements a 
+ {
+ 	color: #fff;
+ }
+ .nav_bar_elements span:hover
+ {
+ 	     background: -webkit-linear-gradient(var(--blue-dark),var(--blue-light));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+	cursor: pointer;
+
+ }
+
+.btn{
+	    padding: 10px 20px;
+    background-color: var(--blue-dark);
+    border: 1px solid var(--blue-light);
+     /*background-image: linear-gradient(var(--blue-dark), var(--blue-light));*/
+
+
+    /* margin-bottom: 104px; */
+    margin: -9px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.hero_container
+{
+	width: 100%;
+	background-color: var(--color-black);
+	height: 69vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 0 0 50% 60% / 50px;
+
+}
+.hero_container h1
+{
+	font-size: 40px;
+	font-weight: 900;
+}
+.search_div_txt
+{
+	font-size: 40px;
+	font-weight: bold;
+
+}
+.field
+{
+	width: 300px;
+	font-size: 40px;
+    padding: 8px 13px;
+    background: none;
+    border: none;
+    border-bottom: 2px solid var(--blue-light);
+    border-radius: 6px;
+    outline: none;
+
+
+  /*   background: -webkit-linear-gradient(var(--blue-dark),var(--blue-light));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+  color: #fff;
+}
+.search_btn
+{
+	    margin-left: 17px;
+    font-size: 21px;
+    color: #fff;
+}
+.white_links
+{
+	color: #fff;
+}
+.sub_hero_container
+{
+	width: 100%;
+}
+.sub_hero_container .sub_hero_titile
+{
+	/*background-color: red;*/
+	text-align: center;
+	margin-top: 50px;
+	color: var(--color-black);
+}
