--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,11 +31,28 @@
 
 <div class="sub_hero_container">
 	<div class="sub_hero_titile">
-		<h1>Messes in your city</h1>
+		<h1 class="logo_color">Messes in Kolkata</h1>
 	</div>
 </div>
 
 
+<div class="messes_container mb-0">
+	<div class="messes">
+			
+		<%= render 'messes/mess' %>
+		
+	</div>
+</div>
 
 
+<div class="hero_three_container">
 
+	<div class="hero_three_left">
+		<h1 class="logo_color">Finding mess is now very easy</h1>
+		<p>Find your perfect mess without any hassle</p>
+	</div>
+	<div class="hero_three_right">
+		<!-- <button class="btn big-btn">Get started <i class="fa-solid fa-angle-right"></i></button> -->
+		<a href="/signup" class="btn big-btn">Get started <i class="fa-solid fa-angle-right"></i></a>
+	</div>
+</div>
