--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -16,6 +16,7 @@
 	--blue-dark:#e73827 ;
 
 }
+
 a{
 	text-decoration: none;
 	/*color: #fff;*/
@@ -27,6 +28,9 @@ a{
 	padding: 3px 20px;
 	height: 70px;
 	color: #fff;
+	position: sticky;
+	top: 0;
+	z-index: 1000;
 }
 .nav_bar
 {
@@ -89,6 +93,7 @@ a{
     margin: -9px;
     border-radius: 6px;
     cursor: pointer;
+    color: #fff;
 }
 
 .hero_container
@@ -151,4 +156,211 @@ a{
 	text-align: center;
 	margin-top: 50px;
 	color: var(--color-black);
+	margin-bottom: 	20px;
+}
+.messes_container
+{
+	min-height: 100vh;
+	width: 100%;
+	/*background-color: lightcyan;*/
+	padding: 10px 30px;
+}
+.messes
+{
+	display: flex;
+	width: 100%;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+.single_mess
+{
+	width: 30%;
+	/*height: 100px;*/
+	background-color: white;
+	margin-bottom: 60px;
+	border-radius: 10px;
+	/*margin-top: 30px;*/
+	padding: 1.4rem;
+	position: relative;
+	/*box-shadow: 1px 1px 5px #bfbcbc;*/	
+	border: 1px solid var(--color-black);
+}
+.single_mess:hover > .mess_image img
+{
+	transform: scale(1.025);
+}
+.single_mess .mess_image
+{
+	width: 100%;
+	/*object-fit: cover;*/
+	border-radius: 10px;
+	overflow: hidden;
+	/*border: 1px solid var(--color-black);*/
+
+}
+.mess_image > img
+{
+	transition: 0.25s ease;
+	display: block;
+	width: 100%;
+	aspect-ratio: 16/9;
+	object-fit: cover;
+	border-radius: 10px;
+}
+.mess_info
+{
+	margin-top: 10px;
+	display: inline-block;/*
+	flex-direction: column*/;
+	height: 100px;
+}
+.mess_info a
+{
+	color: #000;
+}
+
+.mess_info .info_header
+{
+	font-size: 2em;
+}
+.mess_info  .desc
+{
+	margin: 6px 0;
+	display: block;
+	/*min-height: 60%;*/
+}
+.mess_info p
+{
+	display: inline-block;
+    margin-top: 3px;
+
+}
+.badge
+{
+	font-size: 15px;
+	padding: 3px 10px;
+    background: aqua;
+    margin-right: 3px;
+    border-radius: 5px;
+	border: 1px solid var(--color-black);
+
+}
+.price-badge
+{
+	font-size: 20px;
+	border: none;
+	/*padding: 5px 15px;*/
+	background: #eee;
+}
+.serboy
+{
+	background-color: #69b7f9;
+	color: #fff;
+}
+.sergirl
+{
+	background: #fbb1b5;
+	color: #fff;
+}
+.forall
+{
+	background: #68ff90;
+	color: #fff;
+}
+.mess_footer
+{
+	display: flex;
+	margin-top: 10px;
+	position: relative;
+	justify-content: space-between;
+	text-transform: capitalize;
+}
+
+.header
+{
+	width: 100%;
+	margin:20px 0;
+	margin-top: 0;
+	text-align: center;
+	background-color: var(--color-black);
+	border-radius: 0 0 50% 50% / 100px;
+	padding: 40px 0;	
+	font-size: 1.5em;
+}
+.mb-0
+{
+	min-height: 0;
+}
+.hero_three_container
+{
+	margin: auto;
+	width: 90%;
+	background-color: rebeccapurple;
+	padding:30px 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/*background: -webkit-linear-gradient(var(--blue-dark),var(--blue-light));*/
+	background: var(--color-black);
+	border-radius: 10px;
+	margin-bottom: 20px;
+}
+.hero_three_left
+{
+	width: 50%;
+	margin-left: 4rem;
+}
+.hero_three_left h1
+{
+	font-size: 2.5em;
+	font-weight: 900;
+}
+.hero_three_left p
+{
+	color: #fff;
+}
+.hero_three_right
+{
+	width: 40%;
+	text-align: center;
+}
+
+.big-btn
+{
+	font-size: 25px;
+	transition: 0.25s ease;
+}
+.big-btn:hover
+{
+	background: var(--color-black);
+	color: var(--blue-dark);
+}
+.footer_continer
+{
+	width: 100%;
+	height: 30vh;
+	background: var(--color-black);
+	padding: 20px 50px;
+	color: #fff;
+	margin-top: 69px;
+}
+.footer_continer a
+{
+	color: #fff;
+}
+.footer_continer a:hover
+{
+	text-decoration: underline;
+}
+.footer
+{
+	width: 100%;
+	padding: 10px 50px;
+	/*background: red;*/
+	display: flex;
+	justify-content: space-evenly;
+}
+.footer h2
+{
+	font-size: 2em	;
 }
