added signup page styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,10 @@
     <%= render 'layouts/partials/nav' %>
 
     <%= render 'layouts/flash' %>
+    <div class="container">
     <%= yield %>
+      
+    </div>
 
     <%= render 'layouts/partials/footer' %>
   </body>
