--- a/app/views/layouts/partials/_nav.html.erb
+++ b/app/views/layouts/partials/_nav.html.erb
@@ -15,7 +15,7 @@
 			<span>About</span>
 			<span>About</span>
 			<span>About</span>
-			<a href="/signup">
+			<a href="/checkpoint">
 				<span class="btn"><i class="fa-solid fa-user"></i>  Signup</span>
 			</a>
 			<%#= link_to 'Signup',signup_path,class:'btn' %>
