--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -85,7 +85,7 @@ a{
 .btn{
 	    padding: 10px 20px;
     background-color: var(--blue-dark);
-    border: 1px solid var(--blue-light);
+    /*border: 1px solid var(--blue-light);*/
      /*background-image: linear-gradient(var(--blue-dark), var(--blue-light));*/
 
 
@@ -94,8 +94,15 @@ a{
     border-radius: 6px;
     cursor: pointer;
     color: #fff;
+    border: none;
+    transition: 0.25s ease;
 }
-
+.btn:hover
+{
+	background: none;
+	color: var(--blue-dark);
+	border: 1px solid var(--blue-dark);
+}
 .hero_container
 {
 	width: 100%;
@@ -182,8 +189,8 @@ a{
 	/*margin-top: 30px;*/
 	padding: 1.4rem;
 	position: relative;
-	/*box-shadow: 1px 1px 5px #bfbcbc;*/	
-	border: 1px solid var(--color-black);
+	box-shadow: 1px 1px 5px #bfbcbc;	
+	/*border: 1px solid var(--color-black);*/
 }
 .single_mess:hover > .mess_image img
 {
@@ -242,7 +249,7 @@ a{
     background: aqua;
     margin-right: 3px;
     border-radius: 5px;
-	border: 1px solid var(--color-black);
+	/*border: 1px solid var(--color-black);*/
 
 }
 .price-badge
@@ -363,4 +370,107 @@ a{
 .footer h2
 {
 	font-size: 2em	;
+}
+
+.signup_form_container
+{
+	width: 80%;
+	margin: auto;
+	/*background: skyblue;*/
+}
+.signup_form
+{
+	min-width: 80%;
+	/*background: red;*/
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.new_user
+{
+	display: flex;
+	flex-direction: column;
+	width: 70%;
+}
+.new_user .form_label
+{
+	    font-size: 20px;
+    font-weight: 400;
+    margin-top: 10px;
+}
+.new_user .form_field
+{
+		    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    margin-top: 12px;
+    background-color: #fff;
+    border: 1px solid #b5b5b5;
+    min-width: 100%;
+}
+.new_user .form_field:focus
+{
+    box-shadow: 1px 1px 3px #b5b5b5;
+    border: none;
+}
+.label
+{
+	margin-top: 10px;
+	font-size: 20px;
+}
+.signup_btn
+{
+	margin-top: 12px;
+	font-size: 20px;
+}
+
+.errors__container
+{
+	/*margin: 50px 200px;*/
+	width: 50%;
+	margin: 20px auto;
+
+}
+.errors
+{
+	padding: 30px 20px;	
+	background-color: var(--blue-light);
+	border-radius: 5px;
+	border: 2px solid var(--blue-dark);
+	text-align: center;
+
+}
+.errors__h1
+{
+	margin-bottom: 10px;
+
+}
+
+.checkpoint_container
+{
+	width: 80%;
+	margin: auto;
+	margin-top: 50px;
+	/*background: red;*/
+	padding: 10px 30px ;
+	text-align: center;
+}
+.mr
+{
+	margin-right: 20px;
+}
+.chekpoint_title
+{
+	margin-bottom: 20px;
+	font-size: 30px;
+}
+.black_btn
+{
+	color: var(--blue-dark);
+	background-color: var(--color-black);
+	border: none;
 }
