--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,88 +1,95 @@
+
 <% if owner %>
   
 <%= form_for model_name,url:signup_owner_path do |f| %>
-  <%= f.label :name %> <br><br>
-  <%= f.text_field :name,placeholder:'Your name' %> <br><br>
+  <%= f.label :name ,class:'form_label'%> 
+  <%= f.text_field :name,placeholder:'Your name' ,class:'form_field'%> 
 
-  <%= f.label :username %> (<em>minimum is 6 charectors</em>)<br><br>
-  <%= f.text_field :username,placeholder:"Your username" ,required: true%> <br><br>
+  <%= f.label :username ,class:'form_label'%> <em>(minimum is 6 charectors)</em>
+  <%= f.text_field :username,placeholder:"Your username" ,required: true,class:'form_field'%> 
    
-   <%= f.label :email %> <br><br>
-  <%= f.email_field :email,placeholder:"Your email" ,required: true%> <br><br>
+   <%= f.label :email,class:'form_label' %> 
+  <%= f.email_field :email,placeholder:"Your email" ,required: true,class:'form_field'%> 
 
-  <%= f.label :password %> <br>
-  <%= f.password_field :password,required: true %> <br>
+  <%= f.label :password ,class:'form_label'%> 
+  <%= f.password_field :password,required: true ,class:'form_field'%> 
 
-  <%= f.label :password_confirmation %> <br>
-  <%= f.password_field :password_confirmation,required: true %> <br>
+  <%= f.label :password_confirmation ,class:'form_label'%> 
+  <%= f.password_field :password_confirmation,required: true,class:'form_field' %> 
 
-  <%= f.label :gender %> <br>
-  <%= f.radio_button :gender,'male',value:'MALE',required: true %> Male
-  <%= f.radio_button :gender,'female',value:'FEMALE',required: true %> Female <br>
+  <%= f.label :gender ,class:'form_label'%> 
+  <div class="gender_div">
+    
+  <%= f.radio_button :gender,'male',value:'MALE',required: true %>  <span class="label">Male</span>
+  <%= f.radio_button :gender,'female',value:'FEMALE',required: true %>  <span class="label">Female</span>
+  </div>
 
 
-  <%= f.label :city %> <br><br>
-  <%= f.text_field :city,placeholder:"Your city" ,required: true%> <br><br>
+  <%= f.label :city,class:'form_label' %> 
+  <%= f.text_field :city,placeholder:"Your city" ,required: true,class:'form_field'%> 
 
-  <%= f.label :state %> <br><br>
-  <%= f.text_field :state,placeholder:"Your state" ,required: true%> <br><br>
+  <%= f.label :state,class:'form_label' %> 
+  <%= f.text_field :state,placeholder:"Your state" ,required: true,class:'form_field'%> 
 
-  <%= f.label :address %> <br><br>
-  <%= f.text_field :address,placeholder:"Your address",required: true %> <br><br>
+  <%= f.label :address ,class:'form_label'%> 
+  <%= f.text_field :address,placeholder:"Your address",required: true,class:'form_field' %> 
 
-  <%= f.label :phone %> <br><br>
-  <%= f.number_field :phone,placeholder:"Your phone",required: true %> <br><br>
+  <%= f.label :phone ,class:'form_label'%> 
+  <%= f.number_field :phone,placeholder:"Your phone",required: true,class:'form_field' %> 
 
-  <%= f.label :pincode %> <br><br>
-  <%= f.number_field :pincode,placeholder:"Your pincode",required: true %> <br><br>
+  <%= f.label :pincode,class:'form_label' %> 
+  <%= f.number_field :pincode,placeholder:"Your pincode",required: true,class:'form_field' %> 
 
-    <%= f.label :adh ,"Aadhaar No"%> <br><br>
-    <%= f.number_field :adh,placeholder:"Your aadhaar",required: true %> <br><br>
+    <%= f.label :adh ,"Aadhaar No",class:'form_label'%> 
+    <%= f.number_field :adh,placeholder:"Your aadhaar",required: true ,class:'form_field'%> 
 
-  <%= f.submit para %>
+  <%= f.submit para ,class:'btn signup_btn'%>
 
 <% end %>
 
 <% else %>
 
 <%= form_for model_name do |f| %>
-  <%= f.label :name %> <br><br>
-  <%= f.text_field :name,placeholder:'Your name' %> <br><br>
+  <%= f.label :name,class:'form_label' %> 
+  <%= f.text_field :name,placeholder:'Your name',class:'form_field' %> 
 
-  <%= f.label :username %> (<em>minimum is 6 charectors</em>)<br><br>
-  <%= f.text_field :username,placeholder:"Your username" ,required: true%> <br><br>
+  <%= f.label :username ,class:'form_label'%> <em>(minimum is 6 charectors)</em>
+  <%= f.text_field :username,placeholder:"Your username" ,required: true,class:'form_field'%> 
 
-  <%= f.label :password %> <br>
-  <%= f.password_field :password,required: true %> <br>
 
-  <%= f.label :password_confirmation %> <br>
-  <%= f.password_field :password_confirmation,required: true %> <br>
+  <%= f.label :password ,class:'form_label'%> 
+  <%= f.password_field :password,required: true ,class:'form_field',placeholder:'Enter your password'%> 
 
-  <%= f.label :gender %> <br>
-  <%= f.radio_button :gender,'male',value:'MALE',required: true %> Male
-  <%= f.radio_button :gender,'female',value:'FEMALE',required: true %> Female <br>
+  <%= f.label :password_confirmation ,class:'form_label'%> 
+  <%= f.password_field :password_confirmation,required: true ,class:'form_field',placeholder:'Confirm password'%> 
 
-   <%= f.label :email %> <br><br>
-  <%= f.text_field :email,placeholder:"Your email" ,required: true%> <br><br>
+  <%= f.label :gender,class:'form_label' %> 
+  <div class="gender_div">
+    <%= f.radio_button :gender,'male',value:'MALE',required: true %> <span class="label">Male</span>
+    <%= f.radio_button :gender,'female',value:'FEMALE',required: true %> <span class="label">Female</span> 
+  </div>
 
-  <%= f.label :city %> <br><br>
-  <%= f.text_field :city,placeholder:"Your city" ,required: true%> <br><br>
+   <%= f.label :email ,class:'form_label'%> 
+  <%= f.text_field :email,placeholder:"Your email" ,required: true,class:'form_field'%> 
 
-  <%= f.label :state %> <br><br>
-  <%= f.text_field :state,placeholder:"Your state" ,required: true%> <br><br>
+  <%= f.label :city ,class:'form_label'%> 
+  <%= f.text_field :city,placeholder:"Your city" ,required: true,class:'form_field'%> 
 
-  <%= f.label :address %> <br><br>
-  <%= f.text_field :address,placeholder:"Your address",required: true %> <br><br>
+  <%= f.label :state ,class:'form_label'%> 
+  <%= f.text_field :state,placeholder:"Your state" ,required: true,class:'form_field'%> 
 
-  <%= f.label :phone %> <br><br>
-  <%= f.number_field :phone,placeholder:"Your phone",required: true %> <br><br>
+  <%= f.label :address ,class:'form_label'%> 
+  <%= f.text_field :address,placeholder:"Your address",required: true ,class:'form_field'%> 
 
-  <%= f.label :pincode %> <br><br>
-  <%= f.number_field :pincode,placeholder:"Your pincode",required: true %> <br><br>
+  <%= f.label :phone ,class:'form_label'%> 
+  <%= f.number_field :phone,placeholder:"Your phone",required: true ,class:'form_field'%> 
+
+  <%= f.label :pincode ,class:'form_label'%> 
+  <%= f.number_field :pincode,placeholder:"Your pincode",required: true ,class:'form_field'%> 
 
  
 
-  <%= f.submit para %>
+  <%= f.submit para ,class:'btn signup_btn'%>
 
 <% end %>
 
