--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -96,6 +96,7 @@ a{
     color: #fff;
     border: none;
     transition: 0.25s ease;
+    text-transform: capitalize;
 }
 .btn:hover
 {
@@ -189,7 +190,7 @@ a{
 	/*margin-top: 30px;*/
 	padding: 1.4rem;
 	position: relative;
-	box-shadow: 1px 1px 5px #bfbcbc;	
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;	
 	/*border: 1px solid var(--color-black);*/
 }
 .single_mess:hover > .mess_image img
@@ -250,6 +251,7 @@ a{
     margin-right: 3px;
     border-radius: 5px;
 	/*border: 1px solid var(--color-black);*/
+	background-color: #e7e7e7;
 
 }
 .price-badge
@@ -394,13 +396,13 @@ a{
 	flex-direction: column;
 	width: 70%;
 }
-.new_user .form_label
+.form_label
 {
 	    font-size: 20px;
     font-weight: 400;
     margin-top: 10px;
 }
-.new_user .form_field
+.form_field
 {
 		    padding: 10px 20px;
     font-size: 16px;
@@ -473,4 +475,162 @@ a{
 	color: var(--blue-dark);
 	background-color: var(--color-black);
 	border: none;
+}
+
+.mess_show_container
+{
+	display: flex;
+	width: 80%;
+	margin: 20px auto;
+	/*background: red;*/
+}
+.mess_left_container
+{
+	padding: 30px 15px;
+	background: #fff;
+	margin: 20px 30px;
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+}
+.mess_right_container
+{
+	width: 30%;
+	margin: 20px 30px;
+	padding: 30px 20px;
+	background:#fff;
+	border-radius: 10px;
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
+	    height: 50%;
+    /*margin: auto 0;*/
+    position: sticky;
+    top: 10%;
+
+
+}
+.mess_image
+{
+	width: 80%;
+	/*background-color: pink;*/
+	/*padding: 30px 50px;*/	
+	/*margin: auto;*/
+	margin-bottom: 20px;
+	border-radius: 10px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+
+}
+.mess_image img
+{
+	width: 100%;
+	aspect-ratio: 16/9;
+	object-fit: contain;
+	border-radius: 10px;
+}
+.mess_desc
+{
+	padding: 20px 15px;
+	background: white;
+	width: 90%;
+	border-radius: 10px;
+	/*box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;*/
+
+
+}
+.mess_desc p
+{
+	margin-bottom: 10px;
+}.mess_desc h1
+{
+	margin-bottom: 10px;
+}
+.mess_contact a
+{
+	/*color: var(--blue-dark);*/
+	font-weight: bold;
+}
+.mess_contact .info_ps
+{
+	/*font-size: 19px;*/
+    margin-bottom: 10px;
+    /*font-weight: 500;*/
+}
+.price
+{
+	font-size: 38px;
+    margin: 22px auto;
+    font-weight: 700;
+}
+.error_for_not_login
+{
+	width: 100%;
+	text-align: center;
+	padding: 10px 5px;
+	border:1px solid var(--blue-dark);
+	border-radius:5px;
+	align-items: center;
+}
+.info_btn
+{
+	text-align: center;
+	display: block;
+	color: #fff;
+	margin: 10px 0;
+}
+.light_btn
+{
+	background: var(--color-black);
+
+}
+.light_btn:hover
+{
+	border: 1px solid var(--color-black);
+	color: var(--color-black);
+}
+.info_ps a
+{
+	color: var(--blue-dark);
+}
+.write_review_container
+{
+	width: 53%;
+	margin: auto;
+	margin-left: 12.6%;
+
+}
+.mt
+{
+	margin-top: 10px;
+}
+.post_btn
+{
+	margin-left: 2px;
+	width: 10%;
+}
+.all_reviews_container
+{
+	width: 53%;
+	margin: auto;
+	margin-top: 20px;
+	margin-left: 12.6%;
+
+}
+.review
+{
+	margin-top: 10px;
+	padding: 20px 30px;
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+	border-radius: 10px;
+
+}
+.username
+{
+	font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 4px;
 }
