--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -252,6 +252,7 @@ a{
     border-radius: 5px;
 	/*border: 1px solid var(--color-black);*/
 	background-color: #e7e7e7;
+	display: inline-block;
 
 }
 .price-badge
@@ -610,7 +611,8 @@ a{
 .post_btn
 {
 	margin-left: 2px;
-	width: 10%;
+	width: 20%;
+	font-size: 18px;
 }
 .all_reviews_container
 {
@@ -631,6 +633,6 @@ a{
 .username
 {
 	font-size: 15px;
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 4px;
 }
