--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -202,8 +202,8 @@ a{
 	width: 100%;
 	/*object-fit: cover;*/
 	border-radius: 10px;
-	overflow: hidden;
-	/*border: 1px solid var(--color-black);*/
+	/*border: 1px solid var(--color-black);*/	
+
 
 }
 .mess_image > img
@@ -496,6 +496,7 @@ a{
 	justify-content: center;
 	align-items: center;
 	border-radius: 10px;
+	overflow: hidden;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
 }
@@ -526,12 +527,47 @@ a{
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
 }
+.mess_left_container .mess_image
+{
+	display: flex;
+	/*overflow: hidden;*/
+	animation: 40s slider infinite;
+	left: 100%;
+	position: relative;
+}
+@keyframes slider
+{
+	0%{
+		left: 0%;
+	}
+	20%
+	{
+		left: -100%;
+	}
+	40%
+	{
+		left: -200%;
+	}
+	60%
+	{
+		left: -300%;
+	}
+	80%
+	{
+		left: -400%;
+	}
+	100%
+	{
+		left: -500%;
+	}
+}
 .mess_image img
 {
 	width: 100%;
 	aspect-ratio: 16/9;
 	object-fit: contain;
 	border-radius: 10px;
+	margin-right: 10px;
 }
 .mess_desc
 {
