--- a/app/views/messes/new.html.erb
+++ b/app/views/messes/new.html.erb
@@ -1,4 +1,18 @@
-<h1>Upload mess info</h1>
+
+<div class="header">
+	<h1 class="logo_color">Upload your mess </h1>
+</div>
+
+
 <%= render 'users/error',model_name:@mess %>
 
-<%= render 'messes/upload',path:upload_path %>
+
+
+<div class="signup_form_container">
+	
+	<div class="signup_form">
+		
+		<%= render 'messes/upload',path:upload_path %>
+
+	</div>
+</div>
