--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,3 +1,17 @@
-<% flash.each do |name,msg| %>
-  <%= msg %>  
-<% end %>
+
+  
+<div class="flash_container" id="flash_cont">
+  <% flash.each do |name,msg| %>
+  <div class="flash <%=name%>">
+    <h4>
+    <%= msg %>  
+      
+    </h4>
+    <h4>
+      
+    <span class="crossbtn"  id="crsbtn"><i class="fa-solid fa-rectangle-xmark whitecolor"></i></span>
+    </h4>
+  </div>
+  <% end %>
+    
+</div>
