--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+    <div class="blackdiv hide" id="blckdiv"></div>
     <%= render 'layouts/partials/nav' %>
 
     <%= render 'layouts/flash' %>
@@ -30,8 +31,14 @@
       
     </div>
 
+    <%= render 'layouts/partials/search' %>
+
+    <button id="float_search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+
     <%= render 'layouts/partials/footer' %>
 
     <%= javascript_pack_tag 'myjs' %>
+    <%= javascript_pack_tag 'flash' %>
+    <%= javascript_pack_tag 'float_search' %>
   </body>
 </html>
