--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,9 @@
       
     </div>
 
-    <%= render 'layouts/partials/search' %>
+    <%#= render 'layouts/partials/search' %>
 
-    <button id="float_search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+    <!-- <button id="float_search_btn"><i class="fa-solid fa-magnifying-glass"></i></button> -->
 
     <%= render 'layouts/partials/footer' %>
 
