--- a/app/views/layouts/partials/_nav.html.erb
+++ b/app/views/layouts/partials/_nav.html.erb
@@ -12,7 +12,7 @@
 				
 			</span>
 
-			<span>About</span>
+		<span><%= link_to 'About',about_path  %></span>
 			<% if !logged_in? %>
 			<a href="/signin">
 				
